# mimac_fastn

./: .angular-cli.json  hello.js  package-lock.json  package.json
MIMAC/: .gitignore  .gitmodules
MIMAC/config/: source_MIMACTools.sh
MIMAC/config/cmake/: FindROOT.cmake
MIMAC/config/framework/: CMakeLists.txt  buildMimacEnv.sh  buildMimacEnv_GeneObs.sh
MIMAC/config/framework/include/: MyOwnGeneObs.h
MIMAC/config/framework/src/: MyOwnGeneObs.cpp
MIMAC/convertData/: Convert.cc  Makefile.macosx  Makefile.old
src/: index.html  tsconfig.app.json  typings.d.ts
src/app/: Globals.ts  app.component.html  app.component.ts  app.module.ts
src/app/component/acquisition/: acquisition.component.css  acquisition.component.html  acquisition.component.ts
src/app/component/auth/: auth.component.html  auth.component.ts
src/app/component/circuit-gaz/: circuit-gaz.component.html  circuit-gaz.component.spec.ts  circuit-gaz.component.ts
src/app/component/daq/: daq.component.css  daq.component.html  daq.component.spec.ts  daq.component.ts
src/app/component/header/: header.component.html  header.component.ts
src/app/component/help/: help.component.css  help.component.html  help.component.ts
src/app/component/home/: home.component.html  home.component.ts
src/app/component/log-list/: log-list.component.html  log-list.component.ts
src/app/component/menu-modules/: menu-modules.component.html  menu-modules.component.spec.ts  menu-modules.component.ts
src/app/component/monitoring/: monitoring.component.html
src/app/component/parameter/: parameter.component.css  parameter.component.html  parameter.component.ts
src/app/model/: acquisition.ts  circuitGaz.ts  log.ts  parameter.ts  user.ts
src/app/service/: acquisition.service.spec.ts  acquisition.service.ts  connexion.service.ts  log.service.ts
